# Zero-Trust

./: .gitignore  ACTUAL_WORKING_STRUCTURES.md  ATTACKER_IDENTIFICATION.md  DIRECTORY_ENHANCEMENTS.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.enhanced  Dockerfile.honeypot  IMPACKET_PROTECTION.md  INTEGRATION_COMPLETE.md  OVERVIEW.md  QSHARP_AGENTS_CREATION.md  QSHARP_AND_AGENTS_README.md  QSHARP_FILES_INVENTORY.md  QSHARP_INTEGRATION.md  QUANTUM_DEFENSE_COMPLETE.md  QUANTUM_DEPLOYMENT_COMPLETE.md  QUICKSTART.md  README.md  SERVER_README.md  WARP.md  ZeroTrustDefense.csproj  ZeroTrustDefense.slnx  docker-compose.enhanced.yml  docker-compose.yml  main.py  pyproject.toml  pyvenv.cfg  zero-trust-ai-defense.code-workspace
QuickCreatePSCommands/: Setup-DefenseSystem.ps1
agents/: README.md  __init__.py  agent_cli.py  agent_config.py  agent_tools.py  defense_agent.py  quantum_defense_agent.py
cake/: __init__.py  executor.py  generator.py
config/: policies.yaml  rules.yaml
core/: __init__.py  detector.py  orchestrator.py  quantum_anomaly_detector.py  quantum_circuit_analyzer.py  quantum_crypto_defense.py  quantum_error_corrector.py  quantum_performance_monitor.py  quantum_threat_detector.py  query_analyzer.py  risk_scorer.py
deception/: __init__.py  fake_data_factory.py  honeypot_generator.py  tracking_tokens.py
defense/: flood_protection.py  impacket_protection.py
deploy/: docker_controller.py  honeypot_server.py
docs/: 2FA.md  DEPLOYMENT.md  PAYWALL.md  REGISTRATION.md  WEB_PORTAL.md
examples/: __init__.py  agent_example.py  qsharp_app_example.py  (+2 more)
(+44 files in other folders)
